--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     margin : 5vw;
 }
 
+p {
+    line-height: 1.5;
+}
+
 /* MENU */
 
 .menu { /* C'est cette partie qui met les colonnes*/
@@ -142,6 +146,7 @@ a {
     text-align: right;
     font-size: 1rem;
     color: #708090;
+    margin-top: 0,5vw;
 }
 
 /* FOOTER */
